force-app/main/default/objects/Case/fields/Abandoned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Reason__c</fullName>
    <description>Work Order Abandoned Reason copied over when the billable Work Order is abandoned by customers.</description>
    <label>Abandoned Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Customer Response</fullName>
            </value>
            <value>
                <fullName>Customer Declined Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>