force-app/main/default/objects/Case/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <description>Field to Store Answer 1 for PAE/PFA Business Cases</description>
    <label>pAE Answer 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>