force-app/main/default/objects/Case/fields/AP_Lot_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>AP_Lot_Serial_Number__c</fullName>
    <description>Serial Lot Number in Additional product section. This field is auto populated from Case Lines.</description>
    <formula>AP_Installed_Product__r.SVMXC__Serial_Lot_Number__c</formula>
    <label>AP - Serial Number</label>
    <type>Text</type>
</CustomField>