force-app/main/default/objects/Case/fields/AP_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>AP_Product_Group__c</fullName>
    <description>product group in Additional product section. This field is auto populated from Case Lines.</description>
    <formula>TEXT(AP_Product__r.Product_Group__c)</formula>
    <label>AP-Product Group</label>
    <type>Text</type>
</CustomField>