force-app/main/default/objects/Case/fields/AP_UDI_DI__c.field-meta.xml
<CustomField>
    <fullName>AP_UDI_DI__c</fullName>
    <description>UDI/DI in Additional product section. This field is auto populated from Case Lines.</description>
    <formula>IF( SVMXC__Component__r.SVMXC__Product__r.ProductCode = &apos;20014054&apos; &amp;&amp; DATEVALUE(SVMXC__Component__r.CreatedDate) &lt;= DATEVALUE(&quot;2022-05-31&quot;) , &apos;&apos;, AP_Product__r.Device_Identifier__c)</formula>
    <label>AP-UDI/DI</label>
    <type>Text</type>
</CustomField>