force-app/main/default/objects/Case/fields/Approver_Rejector__c.field-meta.xml
<CustomField>
    <fullName>Approver_Rejector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver/Rejector of Reopen Request</description>
    <label>Approver/Rejector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>