force-app/main/default/objects/Case/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>This is created as a part of DCP-614.</description>
    <formula>TEXT( SVMXC__Component__r.Asset_Type__c )</formula>
    <label>Asset Type</label>
    <type>Text</type>
</CustomField>