force-app/main/default/objects/Case/fields/Attempt_Case_Completion__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Case_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will capture values of Attempt case completion field on Work order when Work Order is completed and will be used in escalations rules for notifying users.</description>
    <label>Attempt Case Completion</label>
    <type>Checkbox</type>
</CustomField>