force-app/main/default/objects/Case/fields/Awaiting_Customer_Response_Flag__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Customer_Response_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Qualtrics: Field used for qualtrics surveys, drives questions about agent interaction when inquirey cases go to &apos;Awaiting Response - Customer&quot; status.</description>
    <label>Awaiting Customer Response Flag</label>
    <type>Checkbox</type>
</CustomField>