force-app/main/default/objects/Case/fields/Awaiting_Response_Reason__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Response_Reason__c</fullName>
    <description>US-681
Reason for awaiting response
Generated manually</description>
    <label>Awaiting Response Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Set-Up/NCIF</fullName>
            </value>
            <value>
                <fullName>Account Update</fullName>
            </value>
            <value>
                <fullName>Additional Support</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Allocation Information/ Planning</fullName>
            </value>
            <value>
                <fullName>Cancellation Process</fullName>
            </value>
            <value>
                <fullName>Contracts/LCCR</fullName>
            </value>
            <value>
                <fullName>Credit Block/ Overdue Invoices</fullName>
            </value>
            <value>
                <fullName>Credit Card Info</fullName>
            </value>
            <value>
                <fullName>Custom Design</fullName>
            </value>
            <value>
                <fullName>Customer Data</fullName>
            </value>
            <value>
                <fullName>Customs/Government Documents</fullName>
            </value>
            <value>
                <fullName>Delivery Date/ Ship Schedule</fullName>
            </value>
            <value>
                <fullName>Finance Check</fullName>
            </value>
            <value>
                <fullName>Freight Amount</fullName>
            </value>
            <value>
                <fullName>GIS Support</fullName>
            </value>
            <value>
                <fullName>Instrument Delivery Requirements</fullName>
            </value>
            <value>
                <fullName>Logistics and Shipping</fullName>
            </value>
            <value>
                <fullName>Material Set-Up</fullName>
            </value>
            <value>
                <fullName>New PO/ PO Revision</fullName>
            </value>
            <value>
                <fullName>Nota Fiscal/Invoice</fullName>
            </value>
            <value>
                <fullName>Order Review</fullName>
            </value>
            <value>
                <fullName>Other (Provide Case Comment)</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Payment Terms/ Currency</fullName>
            </value>
            <value>
                <fullName>PO Pricing</fullName>
            </value>
            <value>
                <fullName>PO Pricing + Freight Amount</fullName>
            </value>
            <value>
                <fullName>Prepayment</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Pricing Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>