force-app/main/default/objects/Case/fields/Awaiting_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Response_Time__c</fullName>
    <description>To calculate awaiting response time for the case</description>
    <formula>(Awaiting_Response_Date__c  -  SVMXC__Actual_Initial_Response__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awaiting Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>