force-app/main/default/objects/Case/fields/Awareness_Date_Difference_Reason__c.field-meta.xml
<CustomField>
    <fullName>Awareness_Date_Difference_Reason__c</fullName>
    <description>Reason for Awareness Date Difference is needed when Date of Awareness and Case Created Date has difference.</description>
    <inlineHelpText>Filled in when the Date of Issue Awareness Date doesn’t match the Case Creation Date.</inlineHelpText>
    <label>Awareness Date Difference Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updated information presented by customer</fullName>
            </value>
            <value>
                <fullName>Logistical delay</fullName>
            </value>
            <value>
                <fullName>Automatic case creation during off hours</fullName>
            </value>
            <value>
                <fullName>Other: See Description and Evaluation</fullName>
                <label>Other: See Case Description Field and Work Order Notes Field</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>