force-app/main/default/objects/Case/fields/Case_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To hold the user who has completed the case</description>
    <label>Case Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>