force-app/main/default/objects/Case/fields/Case_Eligible_for_Logistics_Review__c.field-meta.xml
<CustomField>
    <fullName>Case_Eligible_for_Logistics_Review__c</fullName>
    <description>The checkbox is checked when the conditions for the case being in pending logistics review are met.
    DCP-51200 [removed subtype and categories]</description>
    <formula>AND( 
	RecordType.Name = $Label.CaseRecordTypeBusinessIssue,
	Contains_Logistics_Analysis_Code__c  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Eligible for Logistics Review</label>
    <type>Checkbox</type>
</CustomField>