force-app/main/default/objects/Case/fields/Case_Eligible_for_QA_Review__c.field-meta.xml
<CustomField>
    <fullName>Case_Eligible_for_QA_Review__c</fullName>
    <description>The checkbox is checked when the conditions for case being in QA review are met.</description>
    <formula>OR(
AND(
TEXT(Sub_Type__c) = $Label.CaseSubTypeComplaint,
OR(
 IVD_Product_Identifier_Additional_Prod__c = true,
 IVD_Product_Identifier__c = true,
 ISPICKVAL(PAE_PFA_Evaluation_Required__c , &apos;Yes&apos;)
)),
AND(
TEXT(Sub_Type__c) = $Label.CaseSubTypeGeneralIssue,
Routed_from_Logistic__c = true)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Eligible for QA Review</label>
    <type>Checkbox</type>
</CustomField>