force-app/main/default/objects/Case/fields/Case_Last_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Case_Last_Reviewed__c</fullName>
    <description>To populate the date/time when every time the user makes an edit to the Review Comments field or when they click the &apos;Complete Review&apos; or &apos;Reopen Case&apos; sfm buttons.</description>
    <label>Case Last Reviewed</label>
    <type>DateTime</type>
</CustomField>