force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>US-681
To select Category of case, dependent on Sub Type picklist
Generated manuaaly</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQ Instrument &amp; Control Software</fullName>
            </value>
            <value>
                <fullName>Analysis Software</fullName>
            </value>
            <value>
                <fullName>Library Preparation</fullName>
            </value>
            <value>
                <fullName>Microarray</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>LIMS</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Application / Reagent Performance</fullName>
            </value>
            <value>
                <fullName>Change Order Confirmation</fullName>
            </value>
            <value>
                <fullName>Conversion / Ship Schedule</fullName>
            </value>
            <value>
                <fullName>Documentation &amp; Support Tool</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>Logistics / Supply Chain</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>MyIllumina</fullName>
            </value>
            <value>
                <fullName>MyIllumina Feature Request</fullName>
            </value>
            <value>
                <fullName>New Order</fullName>
            </value>
            
            <value>
                <fullName>Oligo Orders</fullName>
            </value>
            <value>
                <fullName>Order Entry Error</fullName>
            </value>
            <value>
                <fullName>Order Expedite</fullName>
            </value>
            <value>
                <fullName>Order Status</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>PCN</fullName>
            </value>
            <value>
                <fullName>PON</fullName>
            </value>
            <value>
                <fullName>PQN</fullName>
            </value>
            
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Quotes</fullName>
            </value>
            <value>
                <fullName>Redirect - Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Redirect - Sales</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Upgrades</fullName>
            </value>
            <value>
                <fullName>Unplanned Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Shipment Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>