force-app/main/default/objects/Case/fields/Closed_with_Associated_Codes__c.field-meta.xml
<CustomField>
    <fullName>Closed_with_Associated_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-25233 this field has been used to check when a case is closed with associated codes attached to it</description>
    <label>Closed with Associated Codes</label>
    <type>Checkbox</type>
</CustomField>