force-app/main/default/objects/Case/fields/CP_Account_Primary_FSE__c.field-meta.xml
<CustomField>
    <fullName>CP_Account_Primary_FSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores primary FSE of CP Account and is used in workflow rule and process builder .</description>
    <label>CP Account Primary FSE</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>