force-app/main/default/objects/Case/fields/Customer_Notification_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification_Email_Address__c</fullName>
    <description>stores the email address to which case completion email will be sent.</description>
    <label>Customer Notification Email Address</label>
    <type>Email</type>
</CustomField>