force-app/main/default/objects/Case/fields/Customer_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order_Number__c</fullName>
    <description>Customer Purchase Order Number is populated manually while creating the case.</description>
    <label>Customer Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>