force-app/main/default/objects/Case/fields/Date_of_Customer_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Customer_Confirmation__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <description>Date when customer acknowledge was received</description>
    <label>Date of Customer Confirmation</label>
    <type>Date</type>
</CustomField>