force-app/main/default/objects/Case/fields/Date_of_Issue_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issue_Awareness__c</fullName>
    <description>Date of issue awareness</description>
    <inlineHelpText>Date Illumina became aware of a Business Issue</inlineHelpText>
    <label>Date of Issue Awareness</label>
    <type>Date</type>
</CustomField>