force-app/main/default/objects/Case/fields/Date_Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Completed__c</fullName>
    <description>US-326 : When a case is marked as complete this field should be populated with appropriate time stamp.</description>
    <label>Date/Time Completed</label>
    <type>DateTime</type>
</CustomField>