force-app/main/default/objects/Case/fields/Date_Time_Reopened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Reopened__c</fullName>
    <description>US-681
Date Time when case is reopened
Generated from automation</description>
    <label>Date/Time Reopened</label>
    <type>DateTime</type>
</CustomField>