force-app/main/default/objects/Case/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Auto filled from Territory district on the account via process builder but manual override is allowed.</description>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Africa District</fullName>
            </value>
            <value>
                <fullName>AMEA No Sync</fullName>
            </value>
            <value>
                <fullName>AMR Broad</fullName>
            </value>            
            <value>
                <fullName>AMR Caris/Veracyte</fullName>
            </value>
            <value>
                <fullName>AMR Distributors</fullName>
            </value>
            <value>
                <fullName>AMR FedGov</fullName>
            </value>
            <value>
                <fullName>AMR Florida Carolinas</fullName>
            </value>
            <value>
                <fullName>AMR FMI/GeneDx</fullName>
            </value>
            <value>
                <fullName>AMR Grail District</fullName>
            </value>
            <value>
                <fullName>AMR Greater Boston</fullName>
            </value>
            <value>
                <fullName>AMR Great Lakes</fullName>
            </value>
            <value>
                <fullName>AMR Guardant/Personalis</fullName>
            </value>
            <value>
                <fullName>AMR Invitae/Adaptive</fullName>
            </value>
            <value>
                <fullName>AMR ISAM Central</fullName>
            </value>
            <value>
                <fullName>AMR ISAM NE</fullName>
            </value>
            <value>
                <fullName>AMR ISAM Pacific</fullName>
            </value>
            <value>
                <fullName>AMR ISAM South</fullName>
            </value>
            <value>
                <fullName>AMR LabCorp/BRL</fullName>
            </value>
            <value>
                <fullName>AMR SoCal HI</fullName>
            </value>
            <value>
                <fullName>AMR Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>AMR Mid South</fullName>
            </value>
            <value>
                <fullName>AMR Mountain Plains</fullName>
            </value>            
            <value>
                <fullName>AMR Myriad/IMH</fullName>
            </value>
            <value>
                <fullName>AMR Natera/TTAM</fullName>
            </value>
            <value>
                <fullName>AMR New York/New England</fullName>
            </value>
            <value>
                <fullName>AMR No Sync</fullName>
            </value>
            <value>
                <fullName>AMR ADNA/Quest</fullName>
            </value>            
            <value>
                <fullName>AMR Ambry/NeoGenomics/BMG</fullName>
            </value>
            <value>
                <fullName>AMR PA NJ DE</fullName>
            </value>
            <value>
                <fullName>AMR SF and East Bay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>