force-app/main/default/objects/Case/fields/Elevated_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Elevated_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To determine whether case has elevated work orders</description>
    <label>Elevated Work Order</label>
    <type>Checkbox</type>
</CustomField>