force-app/main/default/objects/Case/fields/Elevation_Category__c.field-meta.xml
<CustomField>
    <fullName>Elevation_Category__c</fullName>
    <description>The dependent field from work order type for elevation case</description>
    <label>Elevation Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Work_Order_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Management Elevation</fullName>
            </value>
            <value>
                <fullName>Hot Site Elevation</fullName>
            </value>
            <value>
                <fullName>Standard Technical Elevation Regional</fullName>
            </value>
            <value>
                <fullName>Non Standard Technical Elevation Global/HQ</fullName>
            </value>
            <value>
                <fullName>Project Elevation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>