force-app/main/default/objects/Case/fields/Elevation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Elevation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select a user as an elevation manager</description>
<!--QACM-40-->
    <label>Elevation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>