force-app/main/default/objects/Case/fields/Elevation_Parent__c.field-meta.xml
<CustomField>
    <fullName>Elevation_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To identify the parent case of elevation case</description>
    <label>Elevation Parent</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Legacy Elevation Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>