force-app/main/default/objects/Case/fields/Elevation_Region__c.field-meta.xml
<CustomField>
    <fullName>Elevation_Region__c</fullName>
    <description>Territory Region of the associated Account</description>
    <formula>Account.Territory_Region__c</formula>
    <label>Elevation Region</label>
    <type>Text</type>
</CustomField>