force-app/main/default/objects/Case/fields/English_Translation_Description__c.field-meta.xml
<CustomField>
    <fullName>English_Translation_Description__c</fullName>
    <description>Field for Description in English language.</description>
    <label>English Translation Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>