force-app/main/default/objects/Case/fields/English_Translation_Subject__c.field-meta.xml
<CustomField>
    <fullName>English_Translation_Subject__c</fullName>
    <description>Field for Subject in English language.</description>
    <label>English Translation Subject</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>