force-app/main/default/objects/Case/fields/English_Translation_Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>English_Translation_Work_Performed__c</fullName>
    <description>English Translation of the Work Preformed field.</description>
    <label>English Translation Work Performed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>