force-app/main/default/objects/Case/fields/ETQ_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>ETQ_Integration_Status__c</fullName>
    <description>To store the ETQ Integration status</description>
    <label>ETQ Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>