force-app/main/default/objects/Case/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <description>Case evaluation.</description>
    <inlineHelpText>Document the process taken to verify the customer problem statement, steps taken to evaluate/assess the issue and details on how cause was identified</inlineHelpText>
    <label>Evaluation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>