force-app/main/default/objects/Case/fields/Expired_Reagent__c.field-meta.xml
<CustomField>
    <fullName>Expired_Reagent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to flag expired reagents for product</description>
    <label>Is Expired?</label>
    <type>Checkbox</type>
</CustomField>