force-app/main/default/objects/Case/fields/Feature_Flag_Associated_Products__c.field-meta.xml
<CustomField>
    <fullName>Feature_Flag_Associated_Products__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Returns custom metadata record entry Under &quot;Feature Flag&quot; metadata called ServiceAssociatedProducts IsOn value used to control visibility based on if the Associated Product setting is turned on or off in this environment.</description>
    <formula>$CustomMetadata.Feature_Flag__mdt.ServiceAssociatedProducts.IsOn__c</formula>
    <label>Feature Flag Associated Products</label>
    <type>Checkbox</type>
</CustomField>