force-app/main/default/objects/Case/fields/First_Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Resolution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-1304 -  As a Technical Support, Customer Support and Field Service user can view the Inquiry  case record 
Manually check on checkbox</description>
    <label>First Call Resolution</label>
    <type>Checkbox</type>
</CustomField>