force-app/main/default/objects/Case/fields/First_Logistics_Reviewed_On__c.field-meta.xml
<CustomField>
    <fullName>First_Logistics_Reviewed_On__c</fullName>
    <businessOwnerUser>landerson@illumina.com</businessOwnerUser>
    <description>To capture the date time for the first time when Logistics Review Comments is populated for the first time.</description>
    <label>First Logistics Reviewed On</label>
    <type>DateTime</type>
</CustomField>