force-app/main/default/objects/Case/fields/Follow_up_Needed__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-681
Flag for the owner to follow-up on the case
Generated Manually</description>
    <label>Follow-up Needed</label>
    <type>Checkbox</type>
</CustomField>