force-app/main/default/objects/Case/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <description>Grouping for a case with below values so that a case can be queued for a specific group within CS (based on the grouping selected)</description>
    <label>Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>MyIllumina</fullName>
            </value>
            <value>
                <fullName>Instrument Service</fullName>
            </value>
            <value>
                <fullName>Parts Orders</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Service Contracts</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Billable Service</fullName>
            </value>
			<value>
                <fullName>Company Owned</fullName>
            </value>
			<value>
                <fullName>Ariba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>