force-app/main/default/objects/Case/fields/GTS_Status__c.field-meta.xml
<CustomField>
    <fullName>GTS_Status__c</fullName>
	<description>CMCP-22:This Field stores the status of Relocation Request.</description>
	<label>GTS Status</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>Request Initiated</fullName>
			</value>
			<value>
				<fullName>GTS Block</fullName>
			</value>
			<value>
				<fullName>GTS Approved</fullName>
			</value>
			<value>
				<fullName>Request Failed</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>