force-app/main/default/objects/Case/fields/Has_Case_Type_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Has_Case_Type_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the case has case record type as Inquiry</description>
    <label>Has Case Type Inquiry</label>
    <type>Checkbox</type>
</CustomField>