force-app/main/default/objects/Case/fields/Has_Closed_Duplicate_WO__c.field-meta.xml
<CustomField>
    <fullName>Has_Closed_Duplicate_WO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value will be updated to true if work order related to that case is Closed as  duplicate</description>
    <label>Has Closed Duplicate WO</label>
    <type>Checkbox</type>
</CustomField>