force-app/main/default/objects/Case/fields/Has_Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Has_Resolution_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the case has at least one resolution code</description>
    <label>Has Resolution Code</label>
    <type>Checkbox</type>
</CustomField>